syntax = "proto3";

package activity.v1;

option go_package = "github.com/example/anime-platform/gen/activity/v1;activityv1";

message UpsertEpisodeProgressRequest {
  string user_id = 1;
  string episode_id = 2;

  int32 position_seconds = 3;
  int32 duration_seconds = 4;

  // Client timestamp (unix millis) to prevent stale updates overriding new state.
  int64 client_ts_ms = 5;
}

message EpisodeProgress {
  string user_id = 1;
  string episode_id = 2;

  int32 position_seconds = 3;
  int32 duration_seconds = 4;
  bool completed = 5;

  int64 updated_at_ms = 6;
  int64 client_ts_ms = 7;
}

message UpsertEpisodeProgressResponse {
  EpisodeProgress progress = 1;
}

message GetContinueWatchingRequest {
  string user_id = 1;
  int32 limit = 2;
  string cursor = 3;
}

message ContinueItem {
  EpisodeProgress progress = 1;
}

message GetContinueWatchingResponse {
  repeated ContinueItem items = 1;
  int32 limit = 2;
  string next_cursor = 3;
}

service ActivityService {
  rpc UpsertEpisodeProgress(UpsertEpisodeProgressRequest) returns (UpsertEpisodeProgressResponse);
  rpc GetContinueWatching(GetContinueWatchingRequest) returns (GetContinueWatchingResponse);
}
